--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,5 @@
+@import "https://fonts.googleapis.com/css?family=Rubik";
+@import "https://fonts.googleapis.com/css?family=Rubik+Mono+One";
 @import "normalize";
 @import "mixins";
 @import "partials/app";
